--- a/bundlegen/src/test/resources/bundles/dip/vendor1/bundle1/0.0.1/i18n/es.json
+++ b/bundlegen/src/test/resources/bundles/dip/vendor1/bundle1/0.0.1/i18n/es.json
@@ -1,3 +1,10 @@
 {
-  "placeholder": "placeholder"
+  "1": {
+    "key1": "es 1",
+    "key2": "es 2"
+  },
+  "2": {
+    "key21": "es 21",
+    "key22": "es 22"
+  }
 }
