--- a/bundlegen/src/test/resources/bundles/dip/vendor1/bundle1/0.0.1/i18n/fr.json
+++ b/bundlegen/src/test/resources/bundles/dip/vendor1/bundle1/0.0.1/i18n/fr.json
@@ -1,3 +1,10 @@
 {
-  "placeholder": "placeholder"
+  "1": {
+    "key1": "fr 1",
+    "key2": "ft 2"
+  },
+  "2": {
+    "key21": "fr 21",
+    "key22": "fr 22"
+  }
 }
