--- a/bundlegen/src/test/resources/bundles/dip/vendor1/bundle1/0.0.1/i18n/ja.json
+++ b/bundlegen/src/test/resources/bundles/dip/vendor1/bundle1/0.0.1/i18n/ja.json
@@ -1,3 +1,10 @@
 {
-  "placeholder": "placeholder"
+  "1": {
+    "key1": "ja 1",
+    "key2": "ja 2"
+  },
+  "2": {
+    "key21": "ja 21",
+    "key22": "ja 22"
+  }
 }
